--- a/cli/tests/cases/extended_tests.yaml
+++ b/cli/tests/cases/extended_tests.yaml
@@ -118,7 +118,8 @@ cases:
   - name: "Quoted pattern binary string matching"
     known_failure: true # Issue #156
     stdin: |
-      [[ "abc" != "a*" ]] && echo "1. Fail"
+      [[ "abc" == "a*" ]] && echo "1. Matches"
+      [[ "abc" != "a*" ]] && echo "2. Matches"
 
   - name: "Arithmetic extended tests"
     stdin: |
