--- a/parser/Cargo.toml
+++ b/parser/Cargo.toml
@@ -27,6 +27,8 @@ utf8-chars = "3.0.2"
 anyhow = "1.0.82"
 assert_matches = "1.5.0"
 criterion = { version = "0.5.1", features = ["html_reports"] }
+
+[target.'cfg(unix)'.dev-dependencies]
 pprof = { version = "0.13.0", features = ["criterion", "flamegraph"] }
 
 [[bench]]
