--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -213,11 +213,11 @@ jobs:
           cd ..
 
       - name: Performance analysis on PR
-        run: cargo bench --workspace -- --output-format bencher | tee benchmarks.txt
+        run: cargo bench --workspace --exclude brush-root -- --output-format bencher | tee benchmarks.txt
         working-directory: pr
 
       - name: Performance analysis on main
-        run: cargo bench --workspace -- --output-format bencher | tee benchmarks.txt
+        run: cargo bench --workspace --exclude brush-root -- --output-format bencher | tee benchmarks.txt
         working-directory: main
 
       - name: Compare benchmark results
