--- a/cli/tests/cases/patterns.yaml
+++ b/cli/tests/cases/patterns.yaml
@@ -231,7 +231,6 @@ cases:
       echo f+(ab|ad|ac).txt
 
   - name: "Pathname expansion: quoting"
-    known_failure: true
     test_files:
       - path: test.txt
       - path: subdir/test.txt
@@ -240,8 +239,13 @@ cases:
       echo "subdir"/*.txt
       echo "test.*"
 
+  - name: "Patterns: quoting"
+    stdin: |
+      [[ "abc" == "a"* ]] && echo "1. Matched"
+      [[ "abc" == a"*" ]] && echo "2. Matched"
+      [[ "abc" == "a*" ]] && echo "3. Matched"
+
   - name: "Patterns: escaped special characters"
-    known_failure: true
     stdin: |
       myfunc() {
         if [[ $1 == \\* ]]; then
