Assorted fixes for completion
* Overhaul expansion structure

* regex fixes

* Implement set -o

* Fix clippy issues

--- a/cli/tests/cases/arrays.yaml
+++ b/cli/tests/cases/arrays.yaml
@@ -237,10 +237,17 @@ cases:
   - name: "Dump values from non-existent array"
     stdin: |
       for key in ${NONEXISTENT[@]}; do
-        echo "Key: ${key}"
+        echo "@-Key: ${key}"
       done
       for key in "${NONEXISTENT[@]}"; do
-        echo "Quoted Key: ${key}"
+        echo "@-Quoted Key: ${key}"
+      done
+
+      for key in ${NONEXISTENT[*]}; do
+        echo "*-Key: ${key}"
+      done
+      for key in "${NONEXISTENT[*]}"; do
+        echo "*-Quoted Key: ${key}"
       done
 
   - name: "Use non-existent var in indexed array index"
