--- a/cli/tests/cases/extended_tests.yaml
+++ b/cli/tests/cases/extended_tests.yaml
@@ -146,11 +146,11 @@ cases:
 
   - name: "Regex"
     stdin: |
-      [[ "a" =~ ^a$ ]] && echo "1. Pass"
-      [[ "abc" =~ a* ]] && echo "2. Pass"
-      [[ a =~ ^(a)$ ]] && echo "3. Pass"
+      [[ "a" =~ ^a$ ]]   && echo "1. Pass"
+      [[ "abc" =~ a* ]]  && echo "2. Pass"
+      [[ a =~ ^(a)$ ]]   && echo "3. Pass"
       [[ a =~ ^(a|b)$ ]] && echo "4. Pass"
-      [[ a =~ c ]] && echo "5. Pass"
+      [[ a =~ c ]]       && echo "5. Pass"
 
   - name: "Regex with capture"
     stdin: |
@@ -183,6 +183,10 @@ cases:
       [[ "" =~ ^$         ]] && echo "5. Matched"
       [[ "" =~ ${regex}   ]] && echo "6. Matched"
       [[ "" =~ "${regex}" ]] && echo "7. Matched"
+
+  - name: "Regex with escaping"
+    stdin: |
+      [[ '' =~ ^\$$ ]] && echo "1. Matched"
 
   - name: "Empty and space checks"
     stdin: |
