--- a/cli/tests/cases/patterns.yaml
+++ b/cli/tests/cases/patterns.yaml
@@ -156,7 +156,7 @@ cases:
       test_pattern "ad" "+(ab|ac)"
 
   - name: "Pathname expansion: extglob disabled"
-    known_failure: true
+    known_failure: true # Issue #169
     ignore_stderr: true
     test_files:
       - path: "ab.txt"
