--- a/cli/tests/cases/word_expansion.yaml
+++ b/cli/tests/cases/word_expansion.yaml
@@ -108,11 +108,19 @@ cases:
       myarray=()
 
       for f in "${myarray[@]}"; do
-        echo "ELEMENT: $f"
+        echo "Quoted at-sign element: |$f|"
       done
 
       for f in ${myarray[@]}; do
-        echo "ELEMENT: $f"
+        echo "Unquoted at-sign element: |$f|"
+      done
+
+      for f in "${myarray[*]}"; do
+        echo "Quoted at-sign element: |$f|"
+      done
+
+      for f in ${myarray[*]}; do
+        echo "Unquoted at-sign element: |$f|"
       done
 
   - name: "Mixing array elements and other words"
@@ -327,7 +335,55 @@ cases:
       echo "${non_existent_var?error message}"
       echo "This should never execute"
 
-  - name: "Parameter expression: complex cases"
+  - name: "Parameter expression: expanded array as alternate value"
+    stdin: |
+      declare -a var=("abc" "def" "ghi" "")
+
+      for item in "${var[@]}"; do
+        echo "Item: '${item}'"
+      done
+
+      echo "Expression 1: '${var+"${var[@]}"}'"
+      for item in "${var+"${var[@]}"}"; do
+        echo "  -> '${item}'"
+      done
+
+      echo "Expression 2: '${var+${var[@]}}'"
+      for item in "${var+${var[@]}}"; do
+        echo "  -> '${item}'"
+      done
+
+      echo "Expression 3: '${var+"${var[@]}"}'"
+      for item in ${var+"${var[@]}"}; do
+        echo "  -> '${item}'"
+      done
+
+      echo "Expression 4: '${var+${var[@]}}'"
+      for item in ${var+${var[@]}}; do
+        echo "  -> '${item}'"
+      done
+
+      echo "Expression 5: '${var+"${var[*]}"}'"
+      for item in "${var+"${var[*]}"}"; do
+        echo "  -> '${item}'"
+      done
+
+      echo "Expression 6: '${var+${var[*]}}'"
+      for item in "${var+${var[*]}}"; do
+        echo "  -> '${item}'"
+      done
+
+      echo "Expression 7: '${var+"${var[*]}"}'"
+      for item in ${var+"${var[*]}"}; do
+        echo "  -> '${item}'"
+      done
+
+      echo "Expression 8: '${var+${var[*]}}'"
+      for item in ${var+${var[*]}}; do
+        echo "  -> '${item}'"
+      done
+
+  - name: "Parameter expression: expanded array as default value"
     known_failure: true
     stdin: |
       declare -a var=("abc" "def" "ghi" "")
@@ -336,23 +392,23 @@ cases:
         echo "Item: '${item}'"
       done
 
-      echo "Expression 1: ${var+"${var[@]}"}"
-      for item in "${var+"${var[@]}"}"; do
+      echo "Expression 1: ${nonexistent-${var[@]}}"
+      for item in ${nonexistent-${var[@]}}; do
         echo "  -> '${item}'"
       done
 
-      echo "Expression 2: ${var+${var[@]}}"
-      for item in "${var+${var[@]}}"; do
+      echo "Expression 2: ${nonexistent-"${var[@]}"}"
+      for item in ${nonexistent-"${var[@]}"}; do
         echo "  -> '${item}'"
       done
 
-      echo "Expression 3: ${var+"${var[*]}"}"
-      for item in "${var+"${var[*]}"}"; do
+      echo "Expression 3: ${nonexistent2=${var[@]}}"
+      for item in ${nonexistent3=${var[@]}}; do
         echo "  -> '${item}'"
       done
 
-      echo "Expression 4: ${var+${var[*]}}"
-      for item in "${var+"${var[*]}"}"; do
+      echo "Expression 4: ${nonexistent4="${var[@]}"}"
+      for item in ${nonexistent5-"${var[@]}"}; do
         echo "  -> '${item}'"
       done
 
