Properly use a command-scope env for override vars

--- a/cli/tests/cases/builtins/common.yaml
+++ b/cli/tests/cases/builtins/common.yaml
@@ -11,3 +11,10 @@ cases:
 
       echo "Dumping file contents..."
       cat out.txt
+
+  - name: "Overrides"
+    ignore_stderr: true
+    stdin: |
+      declare -p myvar
+      myvar=10 declare -p myvar
+      declare -p myvar
