--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -38,12 +38,6 @@ jobs:
       - name: Install cargo-binstall
         uses: cargo-bins/cargo-binstall@v1.6.4
 
-      - name: Patch sources
-        run: |
-          set -euo pipefail
-          cargo binstall --no-confirm --force cargo-patch
-          cargo patch
-
       - name: Build
         run: cargo build --release
 
@@ -71,12 +65,6 @@ jobs:
 
       - name: Install cargo-llvm-cov
         run: cargo binstall --no-confirm --force cargo-llvm-cov
-
-      - name: Patch sources
-        run: |
-          set -euo pipefail
-          cargo binstall --no-confirm --force cargo-patch
-          cargo patch
 
       - name: Test
         run: |
@@ -147,12 +135,6 @@ jobs:
       - name: Install cargo-binstall
         uses: cargo-bins/cargo-binstall@v1.6.4
 
-      - name: Patch sources
-        run: |
-          set -euo pipefail
-          cargo binstall --no-confirm --force cargo-patch
-          cargo patch
-
       - name: Format check
         run: cargo fmt --check --all
 
@@ -199,25 +181,12 @@ jobs:
       - name: Install cargo-binstall
         uses: cargo-bins/cargo-binstall@v1.6.4
 
-      - name: Patch sources
-        run: |
-          set -euo pipefail
-          cargo binstall --no-confirm --force cargo-patch
-
-          cd pr
-          cargo patch
-          cd ..
-
-          cd main
-          cargo patch
-          cd ..
-
       - name: Performance analysis on PR
-        run: cargo bench --workspace --exclude brush-root -- --output-format bencher | tee benchmarks.txt
+        run: cargo bench --workspace -- --output-format bencher | tee benchmarks.txt
         working-directory: pr
 
       - name: Performance analysis on main
-        run: cargo bench --workspace --exclude brush-root -- --output-format bencher | tee benchmarks.txt
+        run: cargo bench --workspace -- --output-format bencher | tee benchmarks.txt
         working-directory: main
 
       - name: Compare benchmark results
