Get actions running with published results

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -19,6 +19,10 @@ env:
   CLICOLOR: 1
   CLICOLOR_FORCE: 1
 
+permissions:
+  actions: read
+  contents: read
+
 jobs:
   build:
     name: "Build"
@@ -93,12 +97,11 @@ jobs:
 
           exit ${result}
 
-      - name: "Publish test results"
-        uses: EnricoMi/publish-unit-test-result-action@v2
-        if: always()
+      - name: "Upload test results"
+        uses: actions/upload-artifact@v4
         with:
-          files: |
-            test-results-*.xml
+          name: test-reports
+          path: test-results-*.xml
 
       - name: "Generate code coverage report"
         uses: clearlyip/code-coverage-report-action@v4
@@ -108,11 +111,17 @@ jobs:
           artifact_download_workflow_names: "CI"
           filename: "codecov.xml"
 
-      - name: "Publish code coverage data to PR"
-        uses: marocchino/sticky-pull-request-comment@v2
-        if: ${{ github.actor != 'dependabot[bot]' && steps.code_coverage_report.outputs.file != '' && (github.event_name == 'pull_request' || github.event_name == 'pull_request_target') }}
+      - name: "Upload code coverage report"
+        uses: actions/upload-artifact@v4
         with:
+          name: codecov-reports
           path: code-coverage-results.md
+
+      - name: "Upload event file"
+        uses: actions/upload-artifact@v4
+        with:
+          name: event-file
+          path: ${{ github.event_path }}
 
   check:
     name: "Source code checks"
@@ -190,16 +199,14 @@ jobs:
         working-directory: main
 
       - name: Compare benchmark results
-        uses: openpgpjs/github-action-pull-request-benchmark@v1
-        if: ${{ github.actor != 'dependabot[bot]' }}
+        run: |
+          ./pr/scripts/compare-benchmark-results.py -b main/benchmarks.txt -t pr/benchmarks.txt >benchmark-results.md
+
+      - name: Upload performance results
+        uses: actions/upload-artifact@v4
         with:
-          name: "Time benchmark"
-          tool: "cargo"
-          pr-benchmark-file-path: pr/benchmarks.txt
-          base-benchmark-file-path: main/benchmarks.txt
-          comment-always: true
-          alert-threshold: "130%"
-          fail-on-alert: false
-          fail-threshold: "150%"
-          # A token is needed to leave commit comments
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+          name: perf-reports
+          path: |
+            pr/benchmarks.txt
+            main/benchmarks.txt
+            benchmark-results.md
