--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -24,9 +24,9 @@ brush-interactive-shell = { path = "../interactive-shell" }
 brush-parser = { path = "../parser" }
 brush-shell = { path = "../shell" }
 clap = { version = "4.5.4", features = ["derive"] }
-env_logger = "0.11.3"
-log = "0.4.21"
 tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread"] }
+tracing = "0.1.40"
+tracing-subscriber = "0.3.18"
 
 [dev-dependencies]
 anyhow = "1.0.82"
