--- a/shell/Cargo.toml
+++ b/shell/Cargo.toml
@@ -25,7 +25,6 @@ hostname = "0.4.0"
 indexmap = "2.2.6"
 itertools = "0.12.1"
 lazy_static = "1.4.0"
-log = "0.4.21"
 os_pipe = "1.1.5"
 rand = "0.8.5"
 thiserror = "1.0.58"
@@ -38,6 +37,7 @@ tokio = { version = "1.37.0", features = [
     "signal",
 ] }
 tokio-macros = "2.2.0"
+tracing = "0.1.40"
 
 [target.'cfg(windows)'.dependencies]
 homedir = "0.2.1"
