More compgen implementation

--- a/shell/Cargo.toml
+++ b/shell/Cargo.toml
@@ -45,7 +45,7 @@ whoami = "1.5.1"
 
 [target.'cfg(unix)'.dependencies]
 exec = "0.3.1"
-nix = { version = "0.28.0", features = ["fs", "process", "signal"] }
+nix = { version = "0.28.0", features = ["fs", "process", "signal", "user"] }
 tokio-command-fds = "0.2.1"
 uzers = "0.12.0"
 
