Adjust clippy settings

--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -1,8 +1,12 @@
 [package]
 name = "brush-cli"
 description = "brush shell"
+categories.workspace = true
 edition.workspace = true
+keywords.workspace = true
 license.workspace = true
+readme.workspace = true
+repository.workspace = true
 version.workspace = true
 
 [[bin]]
