--- a/parser/Cargo.toml
+++ b/parser/Cargo.toml
@@ -1,8 +1,12 @@
 [package]
 name = "brush-parser"
-description = "Parser"
+description = "Shell parser for brush"
+categories.workspace = true
 edition.workspace = true
+keywords.workspace = true
 license.workspace = true
+readme.workspace = true
+repository.workspace = true
 version.workspace = true
 
 [lib]
