--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,13 +4,25 @@ members = ["cli", "parser", "shell", "interactive-shell"]
 default-members = ["cli", "parser", "shell", "interactive-shell"]
 
 [workspace.package]
+categories = ["command-line-utilities", "development-tools"]
 edition = "2021"
+keywords = ["cli", "shell", "sh", "bash", "script"]
 license = "MIT"
+readme = "README.md"
+repository = "https://github.com/reubeno/brush"
 version = "0.1.0"
 
 [workspace.lints.clippy]
 all = { level = "deny", priority = -1 }
 pedantic = { level = "deny", priority = -1 }
+cargo = { level = "deny", priority = -1 }
+perf = { level = "deny", priority = -1 }
+expect_used = "deny"
+format_push_string = "deny"
+panic = "deny"
+panic_in_result_fn = "deny"
+todo = "deny"
+unwrap_in_result = "deny"
 bool_to_int_with_if = "allow"
 collapsible_else_if = "allow"
 collapsible_if = "allow"
@@ -22,9 +34,9 @@ missing_panics_doc = "allow"
 must_use_candidate = "allow"
 redundant_closure_for_method_calls = "allow"
 redundant_else = "allow"
+result_large_err = "allow"
 similar_names = "allow"
 struct_excessive_bools = "allow"
-result_large_err = "allow"
 
 [profile.release]
 opt-level = "z"
