--- a/shell/Cargo.toml
+++ b/shell/Cargo.toml
@@ -1,8 +1,12 @@
 [package]
 name = "brush-shell"
-description = "brush Shell"
+description = "Core for brush shell"
+categories.workspace = true
 edition.workspace = true
+keywords.workspace = true
 license.workspace = true
+readme.workspace = true
+repository.workspace = true
 version.workspace = true
 
 [lib]
