--- a/cli/tests/cases/redirection.yaml
+++ b/cli/tests/cases/redirection.yaml
@@ -41,8 +41,8 @@ cases:
     stdin: |
       ls -d . non-existent-dir &>/dev/null
 
-  # - name: "Process substitution: input + output"
-  #   known_failure: true # Issue #151
-  #   stdin: |
-  #     shopt -u -o posix
-  #     cp <(echo hi) >(cat)
+  - name: "Process substitution: input + output"
+    known_failure: true # Issue #151
+    stdin: |
+      shopt -u -o posix
+      cp <(echo hi) >(cat)
