--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -37,13 +37,13 @@ assert_cmd = "2.0.14"
 assert_fs = "1.1.1"
 colored = "2.1.0"
 descape = "1.1.2"
+diff = "0.1.13"
 dir-cmp = "0.1.0"
 expectrl = "0.7.1"
 glob = "0.3.1"
 indent = "0.1.1"
 junit-report = "0.8.3"
 pathdiff = "0.2.1"
-prettydiff = { version = "0.7.0", default-features = false }
 regex = "1.10.4"
 serde = { version = "1.0.202", features = ["derive"] }
 serde_yaml = "0.9.34"
